fixes Icon overflow

--- a/src/App/Projects/Project/Icon/Icon.module.scss
+++ b/src/App/Projects/Project/Icon/Icon.module.scss
@@ -13,7 +13,7 @@
 
 .Icon {
   font-size: 86px;
-  height: 90px;
+  height: 100px;
   font-family: 'Icomoon';
   text-align: center;
   margin: auto;
